--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.0.3-2",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "tailwindcss": "^1.5.2",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
