--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "@tailwindcss/typography": "^0.4.0",
     "stimulus": "^2.0.0",
     "tailwindcss": "^1.5.2",
     "trix": "^1.2.0",
