--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "@tailwindcss/typography": "^0.4.0",
+    "ky": "^0.27.0",
     "stimulus": "^2.0.0",
     "tailwindcss": "^1.5.2",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "vue-trix": "^1.2.0",
+    "vue-turbolinks": "^2.2.1"
   },
   "version": "0.1.0",
   "devDependencies": {
